--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,6 @@
     <p><input type="submit" value="solve">
 </p>
 </form>
-<p>{{ a }} * x<sup>2</sup> + {{ b }} * x + {{ c }} = {{ answer }}</p>
+<p>{{ a }} * x<sup>2</sup> + {{ b }} * x + {{ c }} {{ answer }}</p>
 </body>
 </html>
