add page box and form to answer

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,5 +25,6 @@
 </p>
 </form>
 <p>{{ a }} * x<sup>2</sup> + {{ b }} * x + {{ c }} {{ answer }}</p>
+<p>go to page <a href="{% url 'box' %}">box</a></p>
 </body>
 </html>
