--- a/templates/box.html
+++ b/templates/box.html
@@ -10,16 +10,18 @@
 <form method="post">
     {% csrf_token %}
     <label>chooce number</label>
-    <input type="number" name="number">
+    <input type="number" name="number" min="1" max="100">
     <p><input type="submit" value="submit"></p>
 </form>
 {% if  message  %}
 <p>{{ message }}</p>
-    <form method="post">
-    {% csrf_token %}
-        <button name="answer" value="yes">Yes</button>
-        <button name="answer" value="no">No</button>
-    </form>
+    {% if not accuracy %}
+        <form method="post">
+        {% csrf_token %}
+            <button name="answer" value="yes">Yes</button>
+            <button name="answer" value="no">No</button>
+        </form>
+    {% endif %}
 {% endif %}
 </body>
 </html>
