--- a/templates/predicts/predict.html
+++ b/templates/predicts/predict.html
@@ -5,6 +5,7 @@
     <title>box</title>
 </head>
 <body>
+<h1><a href="{% url 'index' %}">Home</a></h1>
 <h3>We have a box with things of different colors, tell me the number </h3>
 <h3>of the item, and I will try to guess its color, after which you can tell if I am right or not</h3>
 <form method="post">
